syntax = "proto3";
package service.v1;

import "gogoproto/gogo.proto";
import "amino/amino.proto";

option go_package = "github.com/onsonr/sonr/x/service/types";

// GenesisState defines the module genesis state
message GenesisState {
  // Params defines all the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// Params defines the set of module parameters.
message Params {
  option (amino.name) = "service/params";
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = false;

  bool some_value = 2;
}